Convert the right-hand display to be a basic dump of the values

--- a/repoze/debug/static/debugui-html.css
+++ b/repoze/debug/static/debugui-html.css
@@ -41,3 +41,9 @@ body {
     color:black;
     border:dashed gray 1px;
 }
+
+.entry-value {
+  margin-left: 0.6em;
+  font-size: 12px;
+  font-family:monospace;
+}
